--- a/References/My_Library_ATE.bib
+++ b/References/My_Library_ATE.bib
@@ -1278,6 +1278,105 @@ Evidence of human migrations over the past 4000 years is identified in existing 
 }
 
 
+@article{payseur_using_2010,
+	title = {Using differential introgression in hybrid zones to identify genomic regions involved in speciation},
+	volume = {10},
+	rights = {© 2010 Blackwell Publishing Ltd},
+	issn = {1755-0998},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1755-0998.2010.02883.x},
+	doi = {10.1111/j.1755-0998.2010.02883.x},
+	abstract = {Hybrids between species provide information about the evolutionary processes involved in divergence. In addition to creating hybrids in the laboratory, biologists can take advantage of natural hybrid zones to understand the factors that shape gene flow between divergent lineages. In the early stages of speciation, most regions of the genome continue to flow freely between populations. Alternatively, the subset of the genome that confers reproductive barriers between nascent species is expected to reject introgression. Now enabled by advances in genomics, this perspective is motivating detailed comparisons of gene flow across genomic regions in hybrid zones. Here, I review methods for measuring and interpreting introgression at multiple loci in hybrid zones, focusing on the problem of identifying loci that contribute to reproductive isolation. Emerging patterns from multi-locus studies of hybrid zones are highlighted, including remarkable variance in introgression across the genome. Although existing methods have been useful, there is scope for development of new analytical approaches that better connect differential patterns of gene flow in hybrid zones with current knowledge of speciation mechanisms. I outline future prospects for differential introgression studies on a genomic scale.},
+	pages = {806--820},
+	number = {5},
+	journaltitle = {Molecular Ecology Resources},
+	author = {Payseur, Bret A.},
+	urldate = {2020-02-28},
+	date = {2010},
+	langid = {english},
+	keywords = {gene flow, hybrid zones, hybridization, introgression, secondary contact, speciation},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/AZMY2BKD/Payseur - 2010 - Using differential introgression in hybrid zones t.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/SP4NWMWD/j.1755-0998.2010.02883.html:text/html}
+}
+
+@article{shaw_genes_2011,
+	title = {Genes versus phenotypes in the study of speciation},
+	volume = {139},
+	issn = {1573-6857},
+	doi = {10.1007/s10709-011-9562-4},
+	abstract = {Despite persistent debate on the nature of species, the widespread adoption of Mayr's biological species concept has led to a heavy emphasis on the importance of reproductive isolation to the speciation process. Equating the origin of species with the evolution of reproductive isolation has become common practice in the study of speciation, coincident with an increasing focus on elucidating the specific genetic changes (i.e.-speciation genes) underlying intrinsic reproductive barriers between species. In contrast, some have recognized that reproductive isolation is usually a signature effect rather than a primary cause of speciation. Here we describe a research paradigm that shifts emphasis from effects to causes in order to resolve this apparent contradiction and galvanize the study of speciation. We identify major elements necessary for a balanced and comprehensive investigation of the origin of species and place the study of so-called "speciation genes" into its appropriate context. We emphasize the importance of characterizing diverging phenotypes, identifying relevant evolutionary forces acting on those phenotypes and their role in the causal origins of reduced gene flow between incipient species, and the nature of the genetic and phenotypic boundaries that results from such processes. This approach has the potential to unify the field of speciation research, by allowing us to make better "historical" predictions about the fate of diverging populations regardless of taxon.},
+	pages = {649--661},
+	number = {5},
+	journaltitle = {Genetica},
+	shortjournal = {Genetica},
+	author = {Shaw, Kerry L. and Mullen, Sean P.},
+	date = {2011-05},
+	pmid = {21442403},
+	keywords = {Genetic Speciation, Genetic Variation, Phenotype, Selection, Genetic, Species Specificity}
+}
+
+@article{hedrick_adaptive_2013,
+	title = {Adaptive introgression in animals: examples and comparison to new mutation and standing variation as sources of adaptive variation},
+	volume = {22},
+	issn = {1365-294X},
+	doi = {10.1111/mec.12415},
+	shorttitle = {Adaptive introgression in animals},
+	abstract = {Adaptive genetic variation has been thought to originate primarily from either new mutation or standing variation. Another potential source of adaptive variation is adaptive variants from other (donor) species that are introgressed into the (recipient) species, termed adaptive introgression. Here, the various attributes of these three potential sources of adaptive variation are compared. For example, the rate of adaptive change is generally thought to be faster from standing variation, slower from mutation and potentially intermediate from adaptive introgression. Additionally, the higher initial frequency of adaptive variation from standing variation and lower initial frequency from mutation might result in a higher probability of fixation of the adaptive variants for standing variation. Adaptive variation from introgression might have higher initial frequency than new adaptive mutations but lower than that from standing variation, again making the impact of adaptive introgression variation potentially intermediate. Adaptive introgressive variants might have multiple changes within a gene and affect multiple loci, an advantage also potentially found for adaptive standing variation but not for new adaptive mutants. The processes that might produce a common variant in two taxa, convergence, trans-species polymorphism from incomplete lineage sorting or from balancing selection and adaptive introgression, are also compared. Finally, potential examples of adaptive introgression in animals, including balancing selection for multiple alleles for major histocompatibility complex ({MHC}), S and csd genes, pesticide resistance in mice, black colour in wolves and white colour in coyotes, Neanderthal or Denisovan ancestry in humans, mimicry genes in Heliconius butterflies, beak traits in Darwin's finches, yellow skin in chickens and non-native ancestry in an endangered native salamander, are examined.},
+	pages = {4606--4618},
+	number = {18},
+	journaltitle = {Molecular Ecology},
+	shortjournal = {Mol. Ecol.},
+	author = {Hedrick, Philip W.},
+	date = {2013-09},
+	pmid = {23906376},
+	keywords = {adaptation, Adaptation, Biological, Animals, Evolution, Molecular, Genetic Variation, Humans, hybridization, Models, Genetic, mutation, Mutation, Selection, Genetic, standing variation, trans-species polymorphism}
+}
+
+@article{sousa_understanding_2013,
+	title = {Understanding the origin of species with genome-scale data: modelling gene flow},
+	volume = {14},
+	rights = {2013 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+	issn = {1471-0064},
+	url = {https://www.nature.com/articles/nrg3446},
+	doi = {10.1038/nrg3446},
+	shorttitle = {Understanding the origin of species with genome-scale data},
+	abstract = {Genome-wide data hold the key to answering long-standing questions about the mechanisms of speciation, including the role of gene flow. Here, the authors discuss recently developed methods to analyse genome-wide data and consider emerging results from their recent application.},
+	pages = {404--414},
+	number = {6},
+	journaltitle = {Nature Reviews Genetics},
+	shortjournal = {Nat Rev Genet},
+	author = {Sousa, Vitor and Hey, Jody},
+	urldate = {2020-02-28},
+	date = {2013-06},
+	langid = {english},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/SM5NDIIJ/Sousa and Hey - 2013 - Understanding the origin of species with genome-sc.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/5XJN83AV/nrg3446.html:text/html}
+}
+
+@online{mayr_animal_1963,
+	title = {Animal Species and Evolution — Ernst Mayr},
+	url = {https://www.hup.harvard.edu/catalog.php?isbn=9780674865327},
+	abstract = {In a series of twenty chapters, Ernst Mayr presents a consecutive story, beginning with a description of evolutionary biology and ending with a discussion of man as a biological species. Calling attention to unsolved problems, and relating the evolutionary subject matter to appropriate material from other fields, such as physiology, genetics, and biochemistry, the author integrates and interprets existing data. Believing that an unequivocal stand is more likely to produce constructive criticism than evasion of an issue, he does not hesitate to choose that interpretation of a controversial matter which to him seems most consistent with the emerging picture of the evolutionary process.},
+	urldate = {2020-02-28},
+	langid = {english},
+	file = {Snapshot:/home/leonardo_iasi/Zotero/storage/NP6RNKW7/catalog.html:text/html}
+}
+
+@article{dannemann_something_2018,
+	title = {Something old, something borrowed: admixture and adaptation in human evolution},
+	volume = {53},
+	issn = {0959-437X},
+	url = {http://www.sciencedirect.com/science/article/pii/S0959437X17301855},
+	doi = {10.1016/j.gde.2018.05.009},
+	series = {Genetics of Human Origins},
+	shorttitle = {Something old, something borrowed},
+	abstract = {The sequencing of ancient {DNA} from archaic humans—Neanderthals and Denisovans—has revealed that modern and archaic humans interbred at least twice during the Pleistocene. The field of human paleogenomics has now turned its attention towards understanding the nature of this genetic legacy in the gene pool of present-day humans. What exactly did modern humans obtain from interbreeding with Neanderthals and Denisovans? Was the introgressed genetic material beneficial, neutral or maladaptive? Can differences in phenotypes among present-day human populations be explained by archaic human introgression? These questions are of prime importance for our understanding of recent human evolution, but will require careful computational modeling and extensive functional assays before they can be answered in full. Here, we review the recent literature characterizing introgressed {DNA} and the likely biological consequences for their modern human carriers. We focus particularly on archaic human haplotypes that were beneficial to modern humans as they expanded across the globe, and on ways to understand how populations harboring these haplotypes evolved over time.},
+	pages = {1--8},
+	journaltitle = {Current Opinion in Genetics \& Development},
+	shortjournal = {Current Opinion in Genetics \& Development},
+	author = {Dannemann, Michael and Racimo, Fernando},
+	urldate = {2019-09-24},
+	date = {2018-12-01},
+	file = {ScienceDirect Full Text PDF:/home/leonardo_iasi/Zotero/storage/TLKN3KCI/Dannemann and Racimo - 2018 - Something old, something borrowed admixture and a.pdf:application/pdf;ScienceDirect Snapshot:/home/leonardo_iasi/Zotero/storage/MD7TVRMB/S0959437X17301855.html:text/html}
+}
+
 @article{sankararaman_genomic_2014,
 	title = {The genomic landscape of Neanderthal ancestry in present-day humans},
 	volume = {507},
